同步UI修改与前版本调整

--- a/web/i18n/zh-Hans/login.json
+++ b/web/i18n/zh-Hans/login.json
@@ -71,7 +71,7 @@
   "noLoginMethodTip": "请联系系统管理员添加身份认证方式",
   "oneMoreStep": "还差一步",
   "or": "或",
-  "pageTitle": "登录 Dify",
+  "pageTitle": "嗨，您好！",
   "pageTitleForE": "嗨，近来可好",
   "password": "密码",
   "passwordChanged": "立即登录",
@@ -80,13 +80,13 @@
   "pp": "隐私政策",
   "reset": "请运行以下命令重置密码",
   "resetLinkSent": "重置链接已发送",
-  "resetPassword": "重置密码",
-  "resetPasswordDesc": "请输入您的电子邮件地址以重置密码。我们将向您发送一封电子邮件。",
+  "resetPassword": "忘记密码",
+  "resetPasswordDesc": "请输入您的电子邮件地址以重置密码。我们将向您发送一封电子邮件，包含如何重置密码的说明。",
   "rightDesc": "简单构建可视化、可运营、可改进的 AI 应用",
   "rightTitle": "释放大型语言模型的全部潜能",
   "sendResetLink": "发送重置链接",
   "sendUsMail": "发封邮件介绍你自己，我们会尽快处理。",
-  "sendVerificationCode": "发送验证码",
+  "sendVerificationCode": "发送重置链接",
   "setAdminAccount": "设置管理员账户",
   "setAdminAccountDesc": "管理员拥有的最大权限，可用于创建应用和管理 LLM 供应商等。",
   "setYourAccount": "设置您的账户",
@@ -108,7 +108,7 @@
   "webapp.login": "登录",
   "webapp.noLoginMethod": "Web 应用未配置身份认证方式",
   "webapp.noLoginMethodTip": "请联系系统管理员添加身份认证方式",
-  "welcome": "👋 欢迎！请登录以开始使用。",
+  "welcome": "欢迎来到AI交付作业平台, 登录以继续",
   "withGitHub": "使用 GitHub 登录",
   "withGoogle": "使用 Google 登录",
   "withSSO": "使用 SSO 登录"
